--- a/algorithms/pom.xml
+++ b/algorithms/pom.xml
@@ -6,9 +6,9 @@
           http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <parent>
-    <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+    <groupId>pro.vlapin.courses.java.fundamentals</groupId>
     <artifactId>java-fundamentals</artifactId>
-    <version>${revision}</version>
+    <version>${revision}${sha1}${changelist}</version>
   </parent>
 
   <artifactId>algorithms</artifactId>
@@ -24,11 +24,11 @@
       <artifactId>commons-lang3</artifactId>
     </dependency>
     <dependency>
-      <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+      <groupId>pro.vlapin.courses.java.fundamentals</groupId>
       <artifactId>fp</artifactId>
     </dependency>
     <dependency>
-      <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+      <groupId>pro.vlapin.courses.java.fundamentals</groupId>
       <artifactId>collections</artifactId>
     </dependency>
   </dependencies>
