--- a/collections/pom.xml
+++ b/collections/pom.xml
@@ -6,9 +6,9 @@
           http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <parent>
-    <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+    <groupId>pro.vlapin.courses.java.fundamentals</groupId>
     <artifactId>java-fundamentals</artifactId>
-    <version>${revision}</version>
+    <version>${revision}${sha1}${changelist}</version>
   </parent>
 
   <artifactId>collections</artifactId>
@@ -21,7 +21,7 @@
   <dependencies>
 
     <dependency>
-      <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+      <groupId>pro.vlapin.courses.java.fundamentals</groupId>
       <artifactId>fp</artifactId>
     </dependency>
 
