--- a/fp/pom.xml
+++ b/fp/pom.xml
@@ -6,9 +6,9 @@
           http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <parent>
-    <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+    <groupId>pro.vlapin.courses.java.fundamentals</groupId>
     <artifactId>java-fundamentals</artifactId>
-    <version>${revision}</version>
+    <version>${revision}${sha1}${changelist}</version>
   </parent>
 
   <artifactId>fp</artifactId>
@@ -20,7 +20,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+      <groupId>pro.vlapin.courses.java.fundamentals</groupId>
       <artifactId>exceptions</artifactId>
     </dependency>
   </dependencies>
