--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -6,10 +6,9 @@
           http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <parent>
-    <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+    <groupId>pro.vlapin.courses.java.fundamentals</groupId>
     <artifactId>java-fundamentals</artifactId>
-    <!--<version>0.0.1-SNAPSHOT</version>-->
-    <version>${revision}</version>
+    <version>${revision}${sha1}${changelist}</version>
   </parent>
 
   <artifactId>jdbc</artifactId>
@@ -22,11 +21,11 @@
   <dependencies>
 
     <dependency>
-      <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+      <groupId>pro.vlapin.courses.java.fundamentals</groupId>
       <artifactId>fp</artifactId>
     </dependency>
     <dependency>
-      <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+      <groupId>pro.vlapin.courses.java.fundamentals</groupId>
       <artifactId>io</artifactId>
     </dependency>
 
