--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,9 @@
           http://maven.apache.org/POM/4.0.0
           http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+  <groupId>pro.vlapin.courses.java.fundamentals</groupId>
   <artifactId>java-fundamentals</artifactId>
-  <!--<version>0.0.1-SNAPSHOT</version>-->
-  <version>${revision}</version>
+  <version>${revision}${sha1}${changelist}</version>
 
   <packaging>pom</packaging>
 
@@ -36,9 +35,12 @@
 
   <properties>
 
+    <revision>0.0.1</revision>
+    <sha1/>
+    <changelist>-SNAPSHOT</changelist>
+
     <!--region General-->
     <java.version>20</java.version>
-    <revision>0.0.1-SNAPSHOT</revision>
     <minimal.maven.version>3.9.4</minimal.maven.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -60,13 +62,13 @@
 
     <lombok.version>1.18.28</lombok.version>
     <vavr.version>1.0.0-alpha-4</vavr.version>
-    <checker.version>3.37.0</checker.version>
+    <checker.version>3.38.0</checker.version>
     <annotations.version>24.0.1</annotations.version>
     <jcip-annotations.version>1.0</jcip-annotations.version>
     <spotbugs.version>4.7.3</spotbugs.version>
     <error_prone_annotations.version>2.21.1</error_prone_annotations.version>
 
-    <tomcat.version>11.0.0-M10</tomcat.version>
+    <tomcat.version>11.0.0-M11</tomcat.version>
     <javaee-api.version>8.0.1</javaee-api.version>
     <checkstyle.version>10.8.0</checkstyle.version>
     <!--endregion-->
@@ -86,13 +88,14 @@
     <maven-enforcer-plugin.version>3.4.0</maven-enforcer-plugin.version>
     <versions-maven-plugin.version>2.16.0</versions-maven-plugin.version>
     <maven-checkstyle-plugin.version>3.3.0</maven-checkstyle-plugin.version>
-    <checkstyle.version>10.12.2</checkstyle.version>
+    <checkstyle.version>10.12.3</checkstyle.version>
     <spotbugs-maven-plugin.version>3.1.12.2</spotbugs-maven-plugin.version>
     <maven-pmd-plugin.version>3.21.0</maven-pmd-plugin.version>
     <sonar-maven-plugin.version>3.9.1.2184</sonar-maven-plugin.version>
     <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
     <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
     <yaml-properties-maven-plugin.version>1.1.3</yaml-properties-maven-plugin.version>
+    <flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
     <!--endregion-->
 
   </properties>
@@ -117,64 +120,64 @@
 
       <!--region modules-->
       <dependency>
-        <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+        <groupId>pro.vlapin.courses.java.fundamentals</groupId>
         <artifactId>intro</artifactId>
-        <version>${revision}</version>
+        <version>${revision}${sha1}${changelist}</version>
       </dependency>
       <dependency>
-        <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+        <groupId>pro.vlapin.courses.java.fundamentals</groupId>
         <artifactId>oop</artifactId>
-        <version>${revision}</version>
+        <version>${revision}${sha1}${changelist}</version>
       </dependency>
       <dependency>
-        <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+        <groupId>pro.vlapin.courses.java.fundamentals</groupId>
         <artifactId>strings</artifactId>
-        <version>${revision}</version>
+        <version>${revision}${sha1}${changelist}</version>
       </dependency>
       <dependency>
-        <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+        <groupId>pro.vlapin.courses.java.fundamentals</groupId>
         <artifactId>io</artifactId>
-        <version>${revision}</version>
+        <version>${revision}${sha1}${changelist}</version>
       </dependency>
       <dependency>
-        <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+        <groupId>pro.vlapin.courses.java.fundamentals</groupId>
         <artifactId>exceptions</artifactId>
-        <version>${revision}</version>
+        <version>${revision}${sha1}${changelist}</version>
       </dependency>
       <dependency>
-        <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+        <groupId>pro.vlapin.courses.java.fundamentals</groupId>
         <artifactId>fp</artifactId>
-        <version>${revision}</version>
+        <version>${revision}${sha1}${changelist}</version>
       </dependency>
       <dependency>
-        <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+        <groupId>pro.vlapin.courses.java.fundamentals</groupId>
         <artifactId>collections</artifactId>
-        <version>${revision}</version>
+        <version>${revision}${sha1}${changelist}</version>
       </dependency>
       <dependency>
-        <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+        <groupId>pro.vlapin.courses.java.fundamentals</groupId>
         <artifactId>threads</artifactId>
-        <version>${revision}</version>
+        <version>${revision}${sha1}${changelist}</version>
       </dependency>
       <dependency>
-        <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+        <groupId>pro.vlapin.courses.java.fundamentals</groupId>
         <artifactId>jdbc</artifactId>
-        <version>${revision}</version>
+        <version>${revision}${sha1}${changelist}</version>
       </dependency>
       <dependency>
-        <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+        <groupId>pro.vlapin.courses.java.fundamentals</groupId>
         <artifactId>web</artifactId>
-        <version>${revision}</version>
+        <version>${revision}${sha1}${changelist}</version>
       </dependency>
       <dependency>
-        <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+        <groupId>pro.vlapin.courses.java.fundamentals</groupId>
         <artifactId>integration</artifactId>
-        <version>${revision}</version>
+        <version>${revision}${sha1}${changelist}</version>
       </dependency>
       <dependency>
-        <groupId>ru.vlapin.courses.java.fundamentals</groupId>
+        <groupId>pro.vlapin.courses.java.fundamentals</groupId>
         <artifactId>algorithms</artifactId>
-        <version>${revision}</version>
+        <version>${revision}${sha1}${changelist}</version>
       </dependency>
       <!--endregion-->
 
@@ -534,6 +537,31 @@
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
+          <artifactId>flatten-maven-plugin</artifactId>
+          <version>${flatten-maven-plugin.version}</version>
+          <configuration>
+            <updatePomFile>true</updatePomFile>
+            <flattenMode>resolveCiFriendliesOnly</flattenMode>
+          </configuration>
+          <executions>
+            <execution>
+              <id>flatten:process-resources:flatten</id>
+              <phase>process-resources</phase>
+              <goals>
+                <goal>flatten</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>flatten.clean:clean:clean</id>
+              <phase>clean</phase>
+              <goals>
+                <goal>clean</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
           <artifactId>versions-maven-plugin</artifactId>
           <version>${versions-maven-plugin.version}</version>
           <configuration>
@@ -598,6 +626,10 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>flatten-maven-plugin</artifactId>
       </plugin>
 
       <!--<plugin>-->
